Format all java files with mvn formatter:format